2013-06-19  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_hold_ball2008.cpp:
	- ホールドボールの評価関数を修正．敵の体の向きとなるべくずれる位置
	を優先するように変更

	* rcsc/player/ball_object.cpp:
	- visible_distance近くの距離の場合に認識できたとみなしてしまう問題に対応

	* rcsc/action/body_hold_ball2008.cpp:
	- ホールドボールの評価関数を修正．敵がキッカブルになる状態に対して
	は大きめのペナルティを与えるように変更
	- ログレベルをHOLDへ変更．デバッグ用マクロの整理

2013-06-18  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- キッカー判定の改善．現在サイクルでキック行動を観測できていないが
	ボール速度の変化が観測できた場合，前サイクルでキッカブル状態のプレ
	イヤを観測できていればその情報に基づいてキッカーを推定するように修正

	* rcsc/player/world_model.cpp:
	- オフサイドラインの更新で次にボールトラップされると予測される位置
	を用いるように変更

2013-06-15  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/intercept_table.cpp:
	* rcsc/player/self_intercept_simulator.cpp:
	- recoveryが減少している状態でインターセプト予測ができていなかったバグを修正

2013-06-14  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/body_hold_ball2008.cpp:
	- 敵が全方位移動した場合を考慮した妨害判定を行うように修正

	* rcsc/player/self_intercept_simulator.cpp:
	- 念の為，ダッシュ方向の正規化しておくように修正

2013-06-12  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/neck_scan_field.cpp:
	- ゴーストプレイヤが存在する場合はプレイヤを無視して全方位で首の向
	きの候補を探すように変更
	- ゴーストプレイヤと判定するのは自分との距離が30m以内のプレイヤに限定

2013-06-11  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/action/basic_actions.cpp:
	* rcsc/action/neck_scan_players.cpp:
	- 首角度の範囲制限のバグを修正．[min_neck_angle,max_neck_angle]に
	確実に収まるように範囲チェックを追加

2013-06-09  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/intercept_table.cpp:
	- 自分の最短インターセプトステップ数更新処理のバグを修正

2013-06-07  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/ball_object.cpp:
	* rcsc/player/world_model.cpp:
	- セットプレイ時のボール情報更新処理をBallObject内に統一
	- キックイン・コーナーキック時にボールに充分近い場合は自分が観た情報を優先するように変更

2013-06-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- ボール速度推定の不具合を修正

	* rcsc/action/kick_table.cpp:
	- キャッシュしておくパスの最大数を256から1024に変更
	- デバッグ出力用の関数追加
